# ClearSwarm

./: .env.example  .flake8  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py  start_all.sh  start_web.sh
.github/workflows/: tests.yml
src/multi_agent/: __init__.py  __main__.py
src/multi_agent/core/: __init__.py  agent.py  config.py  database.py  llm_client.py  orchestrator.py  project.py  prompts.py  scheduler.py
src/multi_agent/tools/: __init__.py  base.py  loader.py
src/multi_agent/ui/: __init__.py
src/multi_agent/web_interface/: README.md  __init__.py  app.py
tests/core/: test_agent.py  test_config.py  test_database.py  test_llm_client.py  test_orchestrator.py  test_prompts.py
tests/tools/: test_base.py  test_loader.py
user/agents/competitor_analyst/: description.txt  system_prompt.txt  tools.txt
user/agents/coordinator/: description.txt  system_prompt.txt  tools.txt
user/agents/dir_creator/: description.txt  system_prompt.txt  tools.txt
user/agents/directory_builder/: description.txt  system_prompt.txt  tools.txt
user/agents/grok_master/: description.txt  system_prompt.txt  tools.txt
user/agents/market_researcher/: description.txt  system_prompt.txt  tools.txt
user/agents/math_assistant/: tools.txt
user/agents/pricing_analyst/: description.txt  system_prompt.txt  tools.txt
user/agents/product_analyst/: description.txt  system_prompt.txt  tools.txt
user/agents/question_answerer/: description.txt
user/prompts/: default.yaml
user/tools/: bash_executor.py  create_directory.py  create_file.py  end_session.py  file_reader.py  file_writer.py  text_analyzer.py  web_fetcher.py  web_fetcher_rich.py  web_search_tavily_tool.py
(+124 files in other folders)
